--- a/pages/404.md
+++ b/pages/404.md
@@ -5,4 +5,5 @@ content-type: static
 title: 404
 ---
 
-> You have reached a page that doesn't exist. Take a u-turn!
+# ERROR 404
+> Esta página no existe
